crates/aranya-policy-compiler/tests/data/type_errors/string_compare_invalid_type_fail.policy
function g(x string) bool {
    return x < "test"
}
